<resources>
    <string name="app_name">Wohoma</string>
    <string name="nombre" id="nombre">Nombre:</string>
    <string name="DNI">DNI:</string>
    <string name="tienda">Tienda:</string>
    <string name="hintCorreo">Correo Electrónico</string>
    <string name="hintPassword">Contraseña</string>
    <string name="hintIniciarSesion">Entrar</string>
    <string name="hintgps1">GPS 1</string>
    <string name="hintgps2">GPS 2</string>
    <string name="hintgps3">GPS 3</string>
    <string name="hintgps4">GPS 4</string>
    <string name="hintregistrar">Registrar</string>
</resources>
